tools/tests/errors/surf_lex_10.ki
# LEXER: a binary literal prefix with no binary digits following it
var x = 0b